fastfood-production/k8s/fastfood-production-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-deployment
  labels:
    app: fastfood
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood
      labels:
        app: fastfood
    spec:
      containers:
        - name: fastfood-tech-challenge-container
          image: soatpostech/fastfood:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 30
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             periodSeconds: 10
             failureThreshold: 5
             initialDelaySeconds: 10
          resources:
            requests:
              cpu: 10m
  selector:
    matchLabels:
      app: fastfood
