fastfood-production/k8s/fastfood-production-rabbit-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fastfood-production-rabbit-statefulset
  labels:
    app: fastfood-production-rabbit
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-production-rabbit
      labels:
        app: fastfood-production-rabbit
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: fastfood-production-rabbit-container
          image: rabbitmq:management
          ports:
            - containerPort: 5672
            - containerPort: 15672
  selector:
    matchLabels:
      app: fastfood-production-rabbit
  serviceName: fastfood-production-rabbit-service
