fastfood-production/k8s/fastfood-production-sql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fastfood-mongo-statefulset
  labels:
    app: fastfood-mongo
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-mongo
      labels:
        app: fastfood-mongo
    spec:
      containers:
        - name: fastfood-mongo-container
          image: mongo:4.0.3
          args: ["--dbpath", "data/db"]
          ports:
            - containerPort: 27017
  selector:
    matchLabels:
      app: fastfood-mongo
  serviceName: fastfood-mongo-service
