fastfood-production/k8s/fastfood-production-mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-production-mongo-service
spec:
  type: ClusterIP
  selector:
    app: fastfood-production-mongo
  ports:
    - port: 27017
