fastfood-production/k8s/fastfood-production-rabbit-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-production-rabbit-service
spec:
  type: LoadBalancer
  selector:
    app: fastfood-production-rabbit
  ports:
    - name: "server"
      port: 5672
      targetPort: 5672

    - name: "ui"
      port: 15672
      targetPort: 15672
