fastfood-production/k8s/fastfood-production-sql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-mongo-service
spec:
  type: ClusterIP
  selector:
    app: fastfood-mongo
  ports:
    - port: 27017
