fastfood-production/k8s/fastfood-production-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-production-service
spec:
  type: LoadBalancer
  selector:
    app: fastfood-production
  ports:
    - port: 8082
      targetPort: 8082
