fastfood-production/k8s/fastfood-production-rabbit-statefulset-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastfood-production-rabbit-virtual-service
spec:
  hosts:
    - fastfood-production-rabbit-service
  http:
    - route:
        - destination:
            host: fastfood-production-rabbit-service
            port:
              number: 5672
